# mccode-plumber

./: pyproject.toml
.github/workflows/: pip.yml  wheels.yml
src/mccode_plumber/: epics.py  forwarder.py  kafka.py  mccode.py  splitrun.py  utils.py  writer.py
src/mccode_plumber/file_writer_control/: InThreadStatusTracker.py  WorkerJobPool.py
src/mccode_plumber/manage/: __init__.py  efu.py  ensure.py  epics.py  forwarder.py  manager.py  orchestrate.py  writer.py
tests/: test_epics.py  test_management.py  test_orchestration_utils.py  test_splitrun.py  test_writer.py
