[build-system]
requires = ['setuptools>=60', 'setuptools_scm>=8.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'mccode-plumber'
dependencies = [
    'p4p==4.1.11',
    'file-writer-control==1.3.0',
    'restage',
    'mccode-antlr>=0.1.2',
    'mccode-to-kafka @ git+https://github.com/g5t/mccode-to-kafka.git',
    'eniius @ git+https://github.com/g5t/eniius.git@antlr',
]
dynamic = ['version']

[project.scripts]
mp-splitrun = 'mccode_plumber.splitrun:main'
mp-epics = 'mccode_plumber.epics:run'
mp-forwarder-setup = 'mccode_plumber.forwarder:setup'
mp-forwarder-teardown = 'mccode_plumber.forwarder:teardown'
mp-writer-from = 'mccode_plumber.writer:print_time'
mp-writer-write = 'mccode_plumber.writer:start_writer'
mp-register-topics = 'mccode_plumber.kafka:register_topics'

[tool.setuptools_scm]

